# Knots

./: .gitignore  README.md  pyproject.toml
docs/: project_plan.md
examples/: layered.json  layered_optimized.json  make_square_svg.py
knots/: __init__.py  checker.py  cli.py  generator.py  model.py  optimizer.py  visualize.py
src/knots_grid/: __init__.py  compact.py  core.py  generator.py  svg.py  validator.py
tests/: test_core_validator.py  test_knots.py
